--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'androidx.fragment:fragment:1.0.0'
+
+    implementation 'com.paypal.sdk:paypal-android-sdk:2.16.0'
 }
